k8s/prod/0.2/flask-k8s-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-k8s-dr
  namespace: ms-prod
spec:
  host: flask-k8s
  subsets:
  - name: prod
    labels:
      version: "0.1"
  - name: canary
    labels:
      version: "0.2"
